# site-front-2

./: .env  .gitignore  README.md  TODO.md  __init__.py  config.py  dictionary.md  package-lock.json  package.json  pyproject.toml  run.py  setup.py  tailwind.config.js  webpack.config.js
docker/emfr/: docker-compose.yml
docker/emfr/solr-emlo/: Dockerfile
site_front_2/: app_paths.py  settings.py
site_front_2/datasrc/: conversionhelper.py  csvtordf.py  fieldmap.py  init_index.py  solr_serv.py  solrconfig.py
site_front_2/flaskapp/: emfr_app.py
site_front_2/flaskapp/filters/: browse_filters.py  emfr_filters.py
site_front_2/flaskapp/templates/: base.html  base.jinja2  browse.html  browse.jinja2  home.html  home.jinja2  index.html
site_front_2/flaskapp/views/: browse.py
static/css/: app.css
static/js/: browse.edge.js  edges.js  helper.js  home.edges.js  institution.edges.js  location.edges.js  organisation.edges.js  people.edges.js  repository_dropdown.edges.js  result.edges.js  result_refine.edges.js  search.js  works.edges.js
templates/: _edges_common_js.jinja2  about.jinja2  advance.jinja2  base.html  base.jinja2  browse.jinja2  collections.jinja2  contribute.jinja2  home.html  home.jinja2  internal_server_error.jinja2  page_not_found.jinja2  results.jinja2
templates/base/: browse_base.jinja2
templates/components/about/: citation.jinja2  contact.jinja2  context.jinja2  cookies.jinja2  copyright.jinja2  credits.jinja2  issues.jinja2  technical.jinja2
views/: about.py  advance.py  browse.py  collections.py  contribute.py  errors.py  forms.py  home.py
(+94 files in other folders)
