[project]
name = "site-front-2"
version = "0.0.1"
requires-python = ">=3.11"
classifiers = [ "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License",]
dependencies = []
[[project.authors]]
name = "seabird64"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project.scripts]
