[project]
name = "site-front-2"
version = "0.0.1"
requires-python = ">=3.12"
classifiers = [ 
    "Development Status :: 3 - Alpha", 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    'Flask~=3.0',
]

[[project.authors]]
name = "cllab"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project.scripts]

[tool.setuptools.packages.find]