[project]
name = "site-front-2"
version = "0.0.1"
requires-python = ">=3.12"
classifiers = [ 
    "Development Status :: 3 - Alpha", 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    'Flask~=3.0',

    'pysolr~=3.8.1',
    'setuptools', # required by pysolr

    'solrpy==0.9.9',  # KTODO tobe replaced with pysolr
]

[[project.authors]]
name = "cllab"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project.scripts]

[tool.setuptools.packages.find]